# audela

./: buildindi.sh  buildindiserver.sh  readme.md
audela/src/: Makefile.defs  Makefile.defs.in  Makefile.rules  Makefile1  astrobrick.sln  audela.sln  audela_VS2008.sln  config.status  configure  configure.bat  configure.in
audela/src/astrobrick/: Makefile
audela/src/astrobrick/libabaudela/linux/: Makefile
audela/src/astrobrick/libabaudela/src/: AllExceptions.h  CBuffer.cpp  CBuffer.h  CBufferPool.cpp  CCamera.cpp  CCamera.h  CLibraryLoader.h  CLink.cpp  CLink.h  CLinkPool.cpp  CMcPool.cpp  CMcPool.h  CTelescope.cpp  CTelescope.h  CTelescopePool.cpp  abaudela.cpp  autoguider.cpp  autoguider.h  cerrorlibtt.cpp  cerrorlibtt.h  cfile.cpp  cfile.h  cpixels.cpp  cpixels.h  cpixelsgray.cpp  cpixelsgray.h  cpixelsrgb.cpp  cpixelsrgb.h  fitskw.cpp  fitskw.h  psfimcce.h  psfimcce_funcs.cpp  psfimcce_nr.cpp
audela/src/astrobrick/libabaudela/vc90/: libabaudela.vcproj  libabaudela.vcxproj  libabaudela.vcxproj.filters
audela/src/astrobrick/libabcommon/linux/: Makefile
audela/src/astrobrick/libabcommon/src/: CDataArray.cpp  CError.cpp  CLogger.cpp  CPool.cpp  ab_common_string.cpp  ab_common_string.h  ab_common_time.cpp  ab_common_time.h  argumentto.cpp
audela/src/astrobrick/libabcommon/vc90/: libabcommon.vcproj  libabcommon.vcxproj  libabcommon.vcxproj.filters
audela/src/astrobrick/libabmc/doc/: abmc_ref_scripts.json  abmc_user_scripts.json
audela/src/astrobrick/libabmc/linux/: Makefile
audela/src/astrobrick/libabmc/src/: CAngle.cpp  CAngle.h  CCoordinates.cpp  CCoordinates.h  CDate.cpp  CDate.h  CHome.cpp  CHome.h  CMc.cpp  CMc.h  CMcPool.cpp  CStruct_mastruct.cpp  CStruct_mastruct.h  abmc.cpp  mc.h  mc_cart1.cpp  mc_cata1.cpp  mc_corc1.cpp  mc_cord1.cpp  mc_elp10.cpp  mc_elp11.cpp  mc_elp12.cpp  mc_elp13.cpp  mc_file1.cpp  mc_file2.cpp  mc_file3.cpp  mc_intg1.cpp  mc_macr1.cpp  mc_macr2.cpp  mc_macr3.cpp  mc_math1.cpp  mc_menu1.cpp  mc_modl1.cpp  mc_nora1.cpp  mc_orbi1.cpp  mc_orbi2.cpp  mc_orbi3.cpp  mc_plnt1.cpp  mc_plnt2.cpp  mc_plnt3.cpp  (+5 more)
audela/src/astrobrick/libabmc/vc90/: libabmc.vcproj  libabmc.vcxproj  libabmc.vcxproj.filters
audela/src/astrobrick/libabsimple/linux/: Makefile
audela/src/astrobrick/libabsimple/src/: CCalculator.cpp  CCalculator.h  CCalendar.cpp  CCalendar.h  CMessageQueue.h  CProducer.cpp  CProducer.h  CProducerPool.cpp  CStation.cpp  CStation.h  CThread.cpp  CThread.h  CWorkItemProducer.cpp  CWorkItemProducer.h  absimple.cpp  planet.cpp  planet.h
audela/src/astrobrick/libabsimple/vc90/: libabsimple.vcproj  libabsimple.vcxproj  libabsimple.vcxproj.filters
audela/src/astrobrickpackaging/: astrobrick-user-guide.html  astrobrick.Doxyfile  mainpage.txt
audela/src/astrobrickpackaging/linux/: makefile
audela/src/astrobrickpackaging/vc90/: astrobrick.vcproj  makefile.vc
audela/src/audela/audela/macosx/: Makefile
audela/src/audela/audela/src/: lapin.c
audela/src/audela/audela/vc90/: audela.vcproj  audela.vcxproj  audela.vcxproj.filters
audela/src/audela/libak/src/: ak.h  ak_4.c  ak_4.h  aktcl.h  aktcl_1.c  libak.c
audela/src/audela/libak/vc90/: libak.vcproj  libak.vcxproj  libak.vcxproj.filters
audela/src/audela/libaudela/linux/: Makefile
audela/src/audela/libaudela/src/: MinimisationAndLinearAlgebraicSystems.cpp  PsfFitter.cpp  PsfFitter.h  buf_tcl.cpp  cbuffer.cpp  cbuffer.h  cdevice.cpp  cdevice.h  cerror.cpp  cerror.h  cfile.cpp  cfile.h  cpixels.cpp  cpixels.h  cpixelsgray.cpp  cpixelsgray.h  cpixelsrgb.cpp  cpixelsrgb.h  cpool.h  file_tcl.cpp  fitskw.cpp  fitskw.h  libaudela.cpp  libaudela.h  libstd.cpp  libstd.h  pool_tcl.cpp  psfimcce.cpp  psfimcce.h  thread.cpp  tt.cpp  utf2Unicode_tcl.cpp  utf2Unicode_tcl.h
audela/src/audela/libaudela/vc90/: libaudela.vcproj  libaudela.vcxproj  libaudela.vcxproj.filters
audela/src/audela/libaudelatk/linux/: Makefile
audela/src/audela/libaudelatk/src/: cvisu.cpp  cvisu.h  cvisupool.h  libaudelatk.cpp  visu_tcl.cpp
audela/src/audela/libaudelatk/vc90/: libaudelatk.vcproj  libaudelatk.vcxproj  libaudelatk.vcxproj.filters
audela/src/audela/libcatalog/linux/: Makefile
audela/src/audela/libcatalog/src/: AllExceptions.h  CCatalog.cpp  CCatalog.h  cs2mass.cpp  cs2mass.h  csbmk.cpp  csbmk.h  csgaia1.cpp  csgaia1.h  csgaia2.cpp  csgaia2.h  csloneos.cpp  csloneos.h  csnomad1.cpp  csnomad1.h  csppmx.cpp  csppmx.h  csppmxl.cpp  cstgas.cpp  cstgas.h  cstycho.cpp  cstycho.h  cstychoFast.cpp  csucac.h  csucac2.cpp  csucac3.cpp  csucac4.cpp  csurat1.cpp  csurat1.h  csusno.h  csusnoa2.cpp  cswfibc.cpp  cswfibc.h  libcatalog.cpp  libcatalog.h  useful.cpp  useful.h
audela/src/audela/libcatalog/vc90/: libcatalog.vcproj  libcatalog.vcxproj  libcatalog.vcxproj.filters
audela/src/audela/libcatalog_tcl/linux/: Makefile
audela/src/audela/libcatalog_tcl/src/: common.cpp  common.h  cs2mass.cpp  csbmk.cpp  csgaia1.cpp  csgaia2.cpp  csloneos.cpp  csnomad1.cpp  csppmx.cpp  csppmxl.cpp  cstgas.cpp  cstycho.cpp  csucac2.cpp  (+7 more)
audela/src/contrib/av4l/: Makefile
audela/src/include/: abaudela.h  abcommon.h  abcommon2.h  abmc.h  absimple.h  tclcommon.h  version.h
audela/src/include/libcam/: libcam.h  libstruc.h  util.h
audela/src/include/libcamab/: libcam.h  libcam_tcl.h  libcamcommon.h
audela/src/include/liblink/: liblink.h  useitem.h
audela/src/include/libtel/: libabtel.h  libstruc.h  libtel.h
audela/src/include/libtelab/: libtel.h  libtelcommon.h
audela/src/libcam/: libcam.cpp  util.cpp
audela/src/libcam/libindicam/: IndiCamera.cpp  IndiCamera.h  camera.cpp  readme.md
audela/src/libcamab/: Makefile
audela/src/libcamab/libcamindi/: readme.md
audela/src/liblink/: liblink.cpp  useitem.cpp
audela/src/libtel/: libtel.cpp
audela/src/libtelab/: Makefile
audela/src/tcl/: Makefile
audela/src/tools/innosetup/: listfiles.tcl
audela/src/tools/packaging/: make_packages.sh
audela/src/tools/testAstrobrick/: stdafx.cpp  testAbaudelaBuffer.cpp  testAbaudelaCamera.cpp  testAbaudelaTelescope.cpp  testAbmcCoordinates.cpp  testAstrobrick.vcxproj  testAstrobrick.vcxproj.filters  testabmc.cpp
(+2328 files in other folders)
